@@ -26,6 +26,7 @@ void gpu_compute_unit_fetch(struct gpu_compute_unit_t *compute_unit)
 	struct gpu_uop_t *uop;
 	struct gpu_work_group_t *work_group;
 	struct gpu_wavefront_t *wavefront;
+	int subwavefront_id;
 
 	/* Check if fetch stage is active */
 	if (!SCHEDULE_FETCH.do_fetch)
@@ -35,18 +36,19 @@ void gpu_compute_unit_fetch(struct gpu_compute_unit_t *compute_unit)
 	uop = SCHEDULE_FETCH.uop;
 	work_group = uop->work_group;
 	wavefront = uop->wavefront;
+	subwavefront_id = SCHEDULE_FETCH.subwavefront_id;
 
 	/* Debug */
-	gpu_pipeline_debug("stg name=\"fetch\", "
-		"uop_id=\"%lld\", "
-		"work_group=\"%d\", "
-		"wavefront=\"%d\", "
-		"subwavefront=\"%d\""
+	gpu_pipeline_debug("uop "
+		"action=\"update\", "
+		"id=%lld, "
+		"subwf=%d, "
+		"cu=%d, "
+		"stg=\"fetch\""
 		"\n",
 		(long long) uop->id,
-		work_group->id,
-		wavefront->id,
-		SCHEDULE_FETCH.subwavefront_id);
+		subwavefront_id,
+		compute_unit->id);
 	
 	/* Send to 'decode' stage */
 	FETCH_DECODE.do_decode = 1;
